# emltree

./: .gitignore  LICENSE  README.md  pyproject.toml
src/emltree/: __init__.py  cli.py  compiler.py  core.py  evaluator.py  primitives.py
tests/: test_core.py
