[project]
name = "emltree"
version = "0.1.0"
description = "Compile elementary-function formulas into pure EML (Exp-Minus-Log) form"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["eml", "symbolic", "math", "sheffer", "sympy", "symbolic-regression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "sympy>=1.12",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/gba3124/emltree"
Repository = "https://github.com/gba3124/emltree"
Paper = "https://arxiv.org/abs/2603.21852"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
emltree = "emltree.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emltree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
